# 3b1b_ml_videos

./: 3b1b.ipynb  3b1b.py  3b1b_3d_reduction_word_meanings.py  README.md  pyproject.toml
